--- a/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
@@ -3,12 +3,12 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
     <ion-label>Seleziona Formato</ion-label>
     <ion-icon (click)="closeModal()" name="close"></ion-icon>
   </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-label>{{firstName.toUpperCase()}}</ion-label>
-  <ion-input (click)="formClick()" readonly="" value="" placeholder="Selezione tipologia">{{selectedtipologianame$}}</ion-input>
+  <ion-label>Formato: </ion-label>
+  <ion-input clearOnEdit="true" (click)="formClick()" readonly value="{{selectedtipologianame$}}" placeholder="Selezione tipologia"></ion-input>
 </ion-content>
