--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -10,17 +10,22 @@
 
 <ion-content>
     <div *ngIf="listfavorites$">
-      <ion-list lines="full" *ngFor="let farmaco of listfavorites$">
-        <ion-item>
-          <ion-avatar slot="start">
-            <img id="icon" src="assets/icon/pill.png">
-          </ion-avatar>
-          <ion-label>
-            <h2>{{farmaco.farmaco.nome}}</h2>
-            <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
-          </ion-label>
-          <ion-icon name="arrow-dropright"></ion-icon>
-        </ion-item>
+      <ion-list no-padding lines="full" *ngFor="let farmaco of listfavorites$ | async" >
+          <ion-item-sliding>
+              <ion-item-options side="start">
+                  <ion-item-option color="danger" (click)="delete(farmaco)">Elimina</ion-item-option>
+              </ion-item-options>
+              <ion-item>
+                  <ion-avatar slot="start">
+                      <img id="icon" src="assets/icon/pill.png">
+                  </ion-avatar>
+                  <ion-label>
+                      <h2>{{farmaco.farmaco.nome}}</h2>
+                      <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+                  </ion-label>
+                  <ion-icon name="arrow-dropright"></ion-icon>
+              </ion-item>
+          </ion-item-sliding>
       </ion-list>
     </div>
     <div *ngIf="!listfavorites$">
