--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -1,65 +1,70 @@
-<ion-header id="ih">
-  <ion-item color="primary">
-    <ion-avatar>
-      <img src="assets/icon/login.png">
-    </ion-avatar>
-    <!--
-    <ion-thumbnail slot="start">
-      <img src="assets/icon/pill.png">
-    </ion-thumbnail>
-    -->
-    <ion-text><h2>{{farmacodetail$.farmaco.nome}}</h2></ion-text>
-  </ion-item>
+
+<ion-header translucent text-center>
+  <ion-toolbar>
+    <ion-title color="light">{{farmacodetail$.farmaco.nome}}</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen>
   <ion-list lines="none">
 
-    <ion-item>
-      <ion-avatar slot="start">
-        <ion-icon name="body"></ion-icon>
-      </ion-avatar>
-      <ion-label>
-        <h3>Principio Attivo</h3>
-        <p>{{farmacodetail$.farmaco.principio}}</p>
-      </ion-label>
-    </ion-item>
-    <ion-item color="light">
-      <ion-avatar slot="end">
-        <ion-icon name="logo-euro"></ion-icon>
-      </ion-avatar>
-      <ion-label>
-        <h3>Spesa</h3>
-        <p>Dispensato da  SSN</p>
-        <p>Prezzo: {{farmacodetail$.farmaco.prezzo}} €</p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <ion-icon name="person"></ion-icon>
-      </ion-avatar>
-      <ion-label>
-        <h3>Produttore (titolare AIC)</h3>
-        <p>{{farmacodetail$.farmaco.produttore}}</p>
-      </ion-label>
-    </ion-item>
-    <ion-item color="light">
-      <ion-avatar slot="end">
-        <ion-icon name="airplane"></ion-icon>
-      </ion-avatar>
-      <ion-label>
-        <h3>Formato</h3>
-        <p>{{farmacodetail$.specifica.formato}}</p>
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <ion-icon name="person"></ion-icon>
-      </ion-avatar>
-      <ion-label>
-        <h3>Modalità Prescrizione</h3>
-        <p>{{farmacodetail$.farmaco.modalita_prescrizione}}</p>
-      </ion-label>
-    </ion-item>
+    <ion-card>
+      <ion-item>
+        <ion-icon name="color-fill" slot="end"></ion-icon>
+        <ion-label>Principio Attivo</ion-label>
+      </ion-item>
+
+      <ion-card-content>
+        {{farmacodetail$.farmaco.principio}}
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-icon name="logo-euro" slot="end"></ion-icon>
+        <ion-label>Dettagli di Vendita</ion-label>
+      </ion-item>
+
+      <ion-card-content>
+        Dispensato da: SSN
+        Prezzo: {{farmacodetail$.farmaco.prezzo}}
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-icon name="contact" slot="end"></ion-icon>
+        <ion-label>Produttore</ion-label>
+      </ion-item>
+
+      <ion-card-content>
+        {{farmacodetail$.farmaco.produttore}}
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-icon name="cube" slot="end"></ion-icon>
+        <ion-label>Formato</ion-label>
+      </ion-item>
+
+      <ion-card-content>
+        Dispensato da: SSN
+        Prezzo:
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-icon name="clipboard" slot="end"></ion-icon>
+        <ion-label>Modalità prescrizione</ion-label>
+      </ion-item>
+
+      <ion-card-content>
+        {{farmacodetail$.farmaco.modalita_prescrizione}}
+      </ion-card-content>
+    </ion-card>
+
+
   </ion-list>
 </ion-content>
