--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.scss
@@ -15,8 +15,13 @@ div {
   width: 88%;
   height: 88%;
   position: absolute;
-  margin-top: -35px;
-  padding-left: 75%;
+  margin-top: -40px;
+  padding-left: 70%;
   z-index: 1000;
+}
+
+ion-avatar {
+  width: 80px;
+  height: 80px;
 }
 
