--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.html
@@ -1,6 +1,6 @@
 
 <ion-header translucent text-center>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title color="light">{{farmacodetail$.farmaco.nome}}</ion-title>
   </ion-toolbar>
   <div>
@@ -11,7 +11,7 @@
 
 </ion-header>
 
-<ion-content fullscreen>
+<ion-content fullscreen color="light" padding-top="5">
   <ion-list lines="none">
 
     <ion-card>
