--- a/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.scss
+++ b/Ionic - DailyPills/myApp/src/app/pages/dettaglio-farmaco/dettaglio-farmaco.page.scss
@@ -26,3 +26,10 @@ ion-avatar {
   height: 80px;
 }
 
+ion-list {
+  background-color: transparent;
+}
+
+ion-card-content {
+  background-color: white;
+}
