--- a/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/armadietto/armadietto.page.html
@@ -1,11 +1,8 @@
-<ion-header>
-  <ion-toolbar color="primary" style="padding: 10px;">
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
-    <ion-label>Il mio Armadietto</ion-label>
-  </ion-toolbar>
+
+<ion-header translucent text-center>
+    <ion-toolbar color="primary">
+        <ion-title color="light">{{'ARMADIETTO_TAB' | translate}}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -16,7 +13,7 @@
       <ion-list no-padding lines="full" *ngFor="let farmaco of listfavorites$ | async" >
           <ion-item-sliding>
               <ion-item-options side="start">
-                  <ion-item-option color="danger" (click)="delete(farmaco)">Elimina</ion-item-option>
+                  <ion-item-option color="danger" (click)="delete(farmaco)">{{ 'DELETE_BUTTON' | translate}}</ion-item-option>
               </ion-item-options>
               <ion-item (click)="farmacoDetailNav(farmaco)">
                   <ion-avatar slot="start">
@@ -24,8 +21,8 @@
                   </ion-avatar>
                   <ion-label>
                       <h2>{{farmaco.farmaco.nome}}</h2>
-                      <p>Formato: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
-                      <p>Quantità rimaste: {{farmaco.numero}} pezzi</p>
+                      <p>{{ 'FORMATO' | translate}}: {{farmaco.specifica.formato}} {{farmaco.specifica.quantita}}gr</p>
+                      <p>{{ 'QUANTITA' | translate}}: {{farmaco.numero}} pezzi</p>
                   </ion-label>
                   <ion-icon name="arrow-dropright"></ion-icon>
               </ion-item>
