--- a/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
@@ -5,6 +5,72 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
+  <ion-grid>
+    <ion-row>
+    <ion-col style="">
+      <form id="nuovoPiano">
+        <ion-row>
+          <ion-col size="12">
+            <ion-card>
+              <ion-item class="ion-item-border">
+                <ion-label color="primary" position="floating">{{ 'NOME_PIANO' | translate }}</ion-label>
+                <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="primary" inputmode="text" placeholder="{{ 'NOME_PIANO_STRING' | translate }}" required="true"></ion-input>
+                <ion-icon name="person" color="primary" slot="end"></ion-icon>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-card>
+              <ion-item class="ion-item-border">
+                <ion-label color="primary" position="floating">{{ 'DATA_INIZIO_PIANO' | translate }}</ion-label>
+                <ion-datetime  displayFormat="DD-MM-YYYY"  value="1990-02-19"></ion-datetime>
+                <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-card>
+              <ion-item class="ion-item-border">
+                <ion-label color="primary" position="floating">{{ 'DATA_FINE_PIANO' | translate }}</ion-label>
+                <ion-datetime displayFormat="DD-MM-YYYY"  value="1990-02-19"></ion-datetime>
+                <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <ion-card>
+              <ion-item class="ion-item-border">
+                <ion-label color="primary" position="floating">{{ 'DESCRIZIONE_PIANO' | translate}}</ion-label>
+                <ion-textarea placeholder="Enter more information here..."></ion-textarea>
+                <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
 
+
+
+        <ion-row>
+          <ion-col size="12">
+            <ion-card color="secondary" style="border-radius: 20px">
+              <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear">
+                <ion-icon slot="save"  color="light" name="log-in"></ion-icon>
+                <ion-text color="light">
+                  {{ 'SAVE_BUTTON' | translate }}
+                </ion-text>
+              </ion-button>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </form>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
