--- a/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/nuovo-piano/nuovo-piano.page.html
@@ -48,7 +48,7 @@
             <ion-card>
               <ion-item class="ion-item-border">
                 <ion-label color="primary" position="floating">{{ 'DESCRIZIONE_PIANO' | translate}}</ion-label>
-                <ion-textarea placeholder="Enter more information here..."></ion-textarea>
+                <ion-textarea placeholder="{{ 'DESCRIZIONE_PIANO_STRING' | translate}}"></ion-textarea>
                 <ion-icon name="calendar" color="primary" slot="end"></ion-icon>
               </ion-item>
             </ion-card>
@@ -61,7 +61,7 @@
           <ion-col size="12">
             <ion-card color="secondary" style="border-radius: 20px">
               <ion-button color="secondary" style="box-shadow: none" type="submit" expand="full" fill="clear">
-                <ion-icon slot="save"  color="light" name="log-in"></ion-icon>
+                <ion-icon slot="start"  color="light" name="save"></ion-icon>
                 <ion-text color="light">
                   {{ 'SAVE_BUTTON' | translate }}
                 </ion-text>
