--- a/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
@@ -3,7 +3,7 @@
         <!--    <ion-searchbar placeholder="Cerca Medicina" animated (ionChange)="liveMedicineFilter($event)"></ion-searchbar>-->
         <ion-label class="nomeFarmaco" position="stacked">{{farmacoName.toUpperCase()}}</ion-label>
         <br>
-        <ion-label class="descrizione">Formati Disponibili</ion-label>
+        <ion-label class="descrizione">{{'ADD_SPECIFICA_TAB' | translate}}</ion-label>
 
         <ion-buttons slot="end">
             <ion-icon name="close" (click)="closeModal()"></ion-icon>
@@ -25,5 +25,5 @@
             </ion-card>
         </ion-col>
     </ion-row>
-    <ion-button (click)="addArmadietto()" float-right>AGGIUNGI</ion-button>
+    <ion-button (click)="addArmadietto()" float-right>{{'ADD_BUTTON' | translate}}</ion-button>
 </ion-content>
