--- a/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
+++ b/Ionic - DailyPills/myApp/src/app/pages/add-specifica/add-specifica.page.html
@@ -15,12 +15,12 @@
         <ion-col size="12">
             <ion-card>
                 <ion-item class="ion-item-border">
-                    <ion-input clearOnEdit="true" (click)="selectFormato()" readonly value="{{selectedtipologianame$}}" placeholder="Scegli Formato"></ion-input>
+                    <ion-input clearOnEdit="true" (click)="selectFormato()" readonly value="{{selectedtipologianame$}}" placeholder="{{'SCEGLI_FORMATO' | translate}}"></ion-input>
                 </ion-item>
             </ion-card>
             <ion-card>
                 <ion-item class="ion-item-border" style="margin-top: 10px">
-                    <ion-input clearOnEdit="true" (click)="selectQuantity()" readonly value="{{selectedtipologiaquantita}}" placeholder="Seleziona Quantità"></ion-input>
+                    <ion-input clearOnEdit="true" (click)="selectQuantity()" readonly value="{{selectedtipologiaquantita}}" placeholder="{{'SELEZIONA_QUANTITA' | translate}}"></ion-input>
                 </ion-item>
             </ion-card>
         </ion-col>
